# auntie-sounds

./: .gitignore  .pre-commit-config.yaml  .pypi  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pypi-release.yml  python-publish-test.yml  python-publish.yml
docs/: conf.py  index.rst
scripts/: test.sh
src/sounds/: __init__.py  auth.py  base.py  client.py  constants.py  exceptions.py  json.orig.py  json.py  models.py  parser.py  personal.py  requests.py  schedule.py  schedules.py  segments.py  session.py  sounds_types.py  stations.py  streaming.py  streaming2.py  user.py  utils.py
tests/: conftest.py  test_models.py  test_parser.py  test_personal_service.py  test_schedule.py  test_station_service.py  test_streaming.py  test_utils.py  tests.py
tests/json/: container.json  container_playable.json  menu.json  news.json  pid_playable.json  podcast_container.json  podcasts.json  programme.json  radio_series.json  schedule.json  search.json  segments.json  stations.json  userinfo.us.json
