[project]
name = "auntie-sounds"
version = "2.0b1"
description = "A library for interacting with BBC Radio stations and streams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.14.1",
    "appdirs==1.4.4",
    "beautifulsoup4==4.15.0",
    "colorlog==6.10.1",
    "pytz==2026.2",
    "typing-extensions==4.15.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.ty.environment]
root = ["./src"]

[tool.uv]
required-version = ">=0.11.8,<0.12"

[tool.uv.build-backend]
package-dir = "src"
namespace = true
module-name = "sounds"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=sounds"
pythonpath = [
  "src"
]
anyio_mode = "auto"

[dependency-groups]
dev = [
    "anyio>=4.14.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.1",
    "sphinx-autoapi>=3.6.1",
    "sphinx>=9.0.4",
]

[tool.coverage.run]
omit = [
    "src/sounds/sounds_types.py",
]
